--- a/MakeMyTripAutomation/test-output/index.html
+++ b/MakeMyTripAutomation/test-output/index.html
@@ -50,7 +50,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\pujak\AppData\Local\Temp\testng-eclipse--1026809041\testng-customsuite.xml</span>
+                    <span>C:\Users\pujak\AppData\Local\Temp\testng-eclipse--1541209205\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -103,12 +103,12 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="runner.TestRunner" class="method navigator-link" hash-for-method="runScenario(&quot;Verify user can book train tickets.&quot;, &quot;To verify trains tab.&quot;)">runScenario("Verify user can book train tickets.", "To verify trains tab.")</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="runner.TestRunner" class="method navigator-link" hash-for-method="runScenario(&quot;Verify user can check PNR status.&quot;, &quot;To verify trains tab.&quot;)">runScenario("Verify user can check PNR status.", "To verify trains tab.")</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="runner.TestRunner" class="method navigator-link" hash-for-method="runScenario(&quot;Verify user can check PNR status.&quot;, &quot;To verify trains tab.&quot;)">runScenario("Verify user can check PNR status.", "To verify trains tab.")</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="runner.TestRunner" class="method navigator-link" hash-for-method="runScenario(&quot;Verify user can book train tickets.&quot;, &quot;To verify trains tab.&quot;)">runScenario("Verify user can book train tickets.", "To verify trains tab.")</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
@@ -136,20 +136,20 @@
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="runScenario(&quot;Verify user can book train tickets.&quot;, &quot;To verify trains tab.&quot;)">
-                  </a> <!-- runScenario("Verify user can book train tickets.", "To verify trains tab.") -->
+                  <a name="runScenario(&quot;Verify user can check PNR status.&quot;, &quot;To verify trains tab.&quot;)">
+                  </a> <!-- runScenario("Verify user can check PNR status.", "To verify trains tab.") -->
                   <span class="method-name">runScenario</span>
-                  <span class="parameters">("Verify user can book train tickets.","To verify trains tab.")</span>
+                  <span class="parameters">("Verify user can check PNR status.","To verify trains tab.")</span>
                   <em>
 (Runs Cucumber Scenarios)                  </em>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
-                  <a name="runScenario(&quot;Verify user can check PNR status.&quot;, &quot;To verify trains tab.&quot;)">
-                  </a> <!-- runScenario("Verify user can check PNR status.", "To verify trains tab.") -->
+                  <a name="runScenario(&quot;Verify user can book train tickets.&quot;, &quot;To verify trains tab.&quot;)">
+                  </a> <!-- runScenario("Verify user can book train tickets.", "To verify trains tab.") -->
                   <span class="method-name">runScenario</span>
-                  <span class="parameters">("Verify user can check PNR status.","To verify trains tab.")</span>
+                  <span class="parameters">("Verify user can book train tickets.","To verify trains tab.")</span>
                   <em>
 (Runs Cucumber Scenarios)                  </em>
                 </div> <!-- method-content -->
@@ -169,7 +169,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\pujak\AppData\Local\Temp\testng-eclipse--1026809041\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\pujak\AppData\Local\Temp\testng-eclipse--1541209205\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -178,7 +178,25 @@
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
+      &lt;class name=&quot;pom.Live_HomePage&quot;/&gt;
+      &lt;class name=&quot;pom.Book_TrainSelectPage&quot;/&gt;
+      &lt;class name=&quot;stepDef.TrainStepDef&quot;/&gt;
+      &lt;class name=&quot;pom.Book_HomePage&quot;/&gt;
+      &lt;class name=&quot;configuration.RootConfig&quot;/&gt;
+      &lt;class name=&quot;configuration.ConfigReader&quot;/&gt;
       &lt;class name=&quot;runner.TestRunner&quot;/&gt;
+      &lt;class name=&quot;pom.PNR_HomePage&quot;/&gt;
+      &lt;class name=&quot;core.ScreenshotUtility&quot;/&gt;
+      &lt;class name=&quot;hooks.CoreHooks&quot;/&gt;
+      &lt;class name=&quot;pom.Train_PopupPage&quot;/&gt;
+      &lt;class name=&quot;pom.Book_TravellerDetailsPage&quot;/&gt;
+      &lt;class name=&quot;page.BusTicketBooking_HomePage&quot;/&gt;
+      &lt;class name=&quot;pom.Live_StatusPage&quot;/&gt;
+      &lt;class name=&quot;pom.PNR_DetailsPage&quot;/&gt;
+      &lt;class name=&quot;pom.LoginPage&quot;/&gt;
+      &lt;class name=&quot;configuration.EnvironmentConfig&quot;/&gt;
+      &lt;class name=&quot;page.BusTicketBooking_BusSelectPage&quot;/&gt;
+      &lt;class name=&quot;driverSetup.DriverFactory&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -192,7 +210,7 @@
           <div class="main-panel-content rounded-window-bottom">
             <ul>
               <li>
-                <span class="test-name">Default test (1 class)</span>
+                <span class="test-name">Default test (19 classes)</span>
               </li>
             </ul>
           </div> <!-- main-panel-content rounded-window-bottom -->
@@ -230,15 +248,15 @@ data.addRows(3);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'runScenario')
 data.setCell(0, 2, 'runner.TestRunner')
-data.setCell(0, 3, 29651);
+data.setCell(0, 3, 30015);
 data.setCell(1, 0, 1)
 data.setCell(1, 1, 'runScenario')
 data.setCell(1, 2, 'runner.TestRunner')
-data.setCell(1, 3, 19755);
+data.setCell(1, 3, 22334);
 data.setCell(2, 0, 2)
 data.setCell(2, 1, 'runScenario')
 data.setCell(2, 2, 'runner.TestRunner')
-data.setCell(2, 3, 13919);
+data.setCell(2, 3, 14385);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
@@ -271,24 +289,24 @@ return data;
             <div class="chronological-class">
               <div class="chronological-class-name">runner.TestRunner</div> <!-- chronological-class-name -->
               <div class="configuration-class before">
-                <span class="method-name">setUpClass(org.testng.TestRunner@6ace919c)</span>
+                <span class="method-name">setUpClass(org.testng.TestRunner@49986178)</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-class before -->
               <div class="test-method">
                 <span class="method-name">runScenario("Verify user can book train tickets.", "To verify trains tab.")</span>
-                <span class="method-start">551 ms</span>
+                <span class="method-start">683 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">runScenario("Verify user can check PNR status.", "To verify trains tab.")</span>
-                <span class="method-start">30262 ms</span>
+                <span class="method-start">30762 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">runScenario("Verify user can live train status.", "To verify trains tab.")</span>
-                <span class="method-start">44184 ms</span>
+                <span class="method-start">45151 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-class after">
                 <span class="method-name">tearDownClass</span>
-                <span class="method-start">63943 ms</span>
+                <span class="method-start">67489 ms</span>
               </div> <!-- configuration-class after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
